trip shopping card v6

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
         <div class="navigation__header">
           <h2 class="header header__normal">Checkout list</h2>
         </div>
-        <div class="navigation__container">
+        <div class="navigation__container" id="navContainer">
           <!-- box 1 -->
-          <div class="navigation__box">
+          <!-- <div class="navigation__box">
             <img
-              src="./images/booking-card--1.jpg"
+              src="./images/destinations/dest--3.jpg"
               alt="card"
               class="navigation__box__img"
             />
@@ -51,44 +51,8 @@
             <div class="navigation__box__close">
               <h1>X</h1>
             </div>
-          </div>
-          <!-- //////////// -->
-          <div class="navigation__box">
-            <img
-              src="./images/booking-card--1.jpg"
-              alt="card"
-              class="navigation__box__img"
-            />
-            <div class="navigation__box__info">
-              <h5 class="header header__card">Eforie Sud</h5>
-              <h6 class="header header__desc">The best choice</h6>
-            </div>
-            <div class="navigation__box__price">
-              <h4 class="header header__price">299 €</h4>
-            </div>
-            <div class="navigation__box__close">
-              <h1>X</h1>
-            </div>
-          </div>
-          <!-- //////////// -->
-          <div class="navigation__box">
-            <img
-              src="./images/booking-card--1.jpg"
-              alt="card"
-              class="navigation__box__img"
-            />
-            <div class="navigation__box__info">
-              <h5 class="header header__card">Eforie Sud</h5>
-              <h6 class="header header__desc">The best choice</h6>
-            </div>
-            <div class="navigation__box__price">
-              <h4 class="header header__price">299 €</h4>
-            </div>
-            <div class="navigation__box__close">
-              <h1>X</h1>
-            </div>
-          </div>
-          <!-- //////////// -->
+          </div> -->
+          <!-- ////////////////////// -->
         </div>
         <div class="navigation__checkout">
           <button class="button-checkout" id="buttonCheckOut">
