trip shopping card v11

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         <div class="navigation__header">
           <h2 class="header header__normal">Checkout list</h2>
         </div>
+        <div class="navigation__message" id="navMessage">
+          <h1 class="header header__normal center">
+            Shopping list is empty 😞
+          </h1>
+        </div>
         <div class="navigation__container" id="navContainer">
           <!-- box 1 -->
           <!-- <div class="navigation__box">
