trip shopping card v12

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
           <!-- ////////////////////// -->
         </div>
         <div class="navigation__checkout">
-          <button class="button-checkout" id="buttonCheckOut">
-            continue to payment
-          </button>
+          <button class="button-checkout" id="buttonCheckOut">TOTAL</button>
         </div>
       </div>
     </navigation>
