trip booking page v1

--- a/index.html
+++ b/index.html
@@ -38,27 +38,7 @@
             Shopping list is empty 😞
           </h1>
         </div>
-        <div class="navigation__container" id="navContainer">
-          <!-- box 1 -->
-          <!-- <div class="navigation__box">
-            <img
-              src="./images/destinations/dest--3.jpg"
-              alt="card"
-              class="navigation__box__img"
-            />
-            <div class="navigation__box__info">
-              <h5 class="header header__card">Eforie Sud</h5>
-              <h6 class="header header__desc">The best choice</h6>
-            </div>
-            <div class="navigation__box__price hidden">
-              <h4 class="header header__price">299 €</h4>
-            </div>
-            <div class="navigation__box__close">
-              <h1>X</h1>
-            </div>
-          </div> -->
-          <!-- ////////////////////// -->
-        </div>
+        <div class="navigation__container" id="navContainer"></div>
         <div class="navigation__checkout">
           <button class="button-checkout" id="buttonCheckOut">TOTAL</button>
         </div>
@@ -206,9 +186,7 @@
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
           praesentium quis officia dicta, excepturi vel quos perferendis dolor?
         </p>
-        <a href="https://bennettfeely.com/clippy/" class="button-cta"
-          >Start booking</a
-        >
+        <a href="./pages/booking.html" class="button-cta">Start booking</a>
       </div>
     </section>
     <footer class="footer">
