trip booking page v3

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -50,46 +50,7 @@
         Here you can find the best places to go
       </h1>
     </section>
-    <section class="booking-container">
-      <!-- FOR JS -->
-      <div class="booking-container__card">
-        <div class="booking-container__picture">
-          <img src="../images/destinations/dest--1.jpg" alt="Bahamas" />
-        </div>
-        <div class="booking-container__box">
-          <h1 class="header header__normal">Bahamas</h1>
-          <h1 class="header header__desc">The best food</h1>
-          <h1 class="header header__normal">299 €</h1>
-          <button class="button-checkout">Add to cart</button>
-        </div>
-      </div>
-      <!-- end card -->
-      <div class="booking-container__card">
-        <div class="booking-container__picture">
-          <img src="../images/destinations/dest--2.jpg" alt="Bahamas" />
-        </div>
-        <div class="booking-container__box">
-          <h1 class="header header__normal">Bali</h1>
-          <h1 class="header header__desc">Good prices</h1>
-          <h1 class="header header__normal">199 €</h1>
-          <button class="button-checkout">Add to cart</button>
-        </div>
-      </div>
-      <!-- end card -->
-      <div class="booking-container__card">
-        <div class="booking-container__picture">
-          <img src="../images/destinations/dest--3.jpg" alt="Bahamas" />
-        </div>
-        <div class="booking-container__box">
-          <h1 class="header header__normal">Maldives</h1>
-          <h1 class="header header__desc">Best overall</h1>
-          <h1 class="header header__normal">399 €</h1>
-          <button class="button-checkout">Add to cart</button>
-        </div>
-      </div>
-      <!-- end card -->
-      <!-- TILL HERE -->
-    </section>
+    <section class="booking-container"></section>
 
     <footer class="footer">
       <div class="footer__box footer__box-1">
