trip booking page v5

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -34,7 +34,7 @@
           <h2 class="header header__normal">Checkout list</h2>
         </div>
         <div class="navigation__message" id="navMessage">
-          <h1 class="header header__normal center">
+          <h1 class="header header__normal center" id="header-message">
             Shopping list is empty 😞
           </h1>
         </div>
