trip booking page v6

--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit, eum dicta
         fuga eaque eligendi soluta.
       </p>
-      <a href="https://bennettfeely.com/clippy/" class="button-cta"
-        >Start booking</a
-      >
+      <a href="#" class="button-cta">Start booking</a>
     </section>
     <div class="example">
       <div class="example__picture">
