--- a/pages/booking.html
+++ b/pages/booking.html
@@ -51,7 +51,54 @@
       </h1>
     </section>
     <section class="booking-container"></section>
-
+    <div class="booking-see-more">
+      <button class="button-readmore" id="button-see-more">See more</button>
+      <button class="button-readmore" id="button-see-less">See less</button>
+    </div>
+    <section class="booking-whyUs">
+      <h1 class="header header__big center">Asking yourself why us?</h1>
+    </section>
+    <section class="booking-motivations">
+      <div class="booking-motivations__box">
+        <div
+          class="booking-motivations__picture booking-motivations__picture--1"
+        ></div>
+        <div class="booking-motivations__text">
+          <h1 class="header header__normal center">Client on first place</h1>
+        </div>
+      </div>
+      <div class="booking-motivations__box">
+        <div
+          class="booking-motivations__picture booking-motivations__picture--2"
+        ></div>
+        <div class="booking-motivations__text">
+          <h1 class="header header__normal center">
+            We take care of everything
+          </h1>
+        </div>
+      </div>
+      <div class="booking-motivations__box">
+        <div
+          class="booking-motivations__picture booking-motivations__picture--3"
+        ></div>
+        <div class="booking-motivations__text">
+          <h1 class="header header__normal center">
+            Top rated places to visit
+          </h1>
+        </div>
+      </div>
+      <div class="booking-motivations__box">
+        <div
+          class="booking-motivations__picture booking-motivations__picture--4"
+        ></div>
+        <div class="booking-motivations__text">
+          <h1 class="header header__normal center">Best choice overall</h1>
+        </div>
+      </div>
+    </section>
+    <section class="booking-reviews">
+      <h1 class="header header__big center">Don't belive us, belive them...</h1>
+    </section>
     <footer class="footer">
       <div class="footer__box footer__box-1">
         <img src="../images/logo--3.svg" alt="road trip logo" />
