trip booking page v9

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -98,6 +98,19 @@
     </section>
     <section class="booking-reviews">
       <h1 class="header header__big center">Don't belive us, belive them...</h1>
+      <div class="booking-reviews__container">
+        <button>button left</button>
+        <div class="booking-reviews__text">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quo
+            illo error, nulla dolorem, ab provident ex quaerat quae doloribus
+            dignissimos enim autem quia? Amet explicabo atque voluptate quam
+            vel.
+          </p>
+          <h1 class="header header__hand transform-none">Jack Daniels</h1>
+        </div>
+        <button>button right</button>
+      </div>
     </section>
     <footer class="footer">
       <div class="footer__box footer__box-1">
