trip booking page v10

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -99,7 +99,12 @@
     <section class="booking-reviews">
       <h1 class="header header__big center">Don't belive us, belive them...</h1>
       <div class="booking-reviews__container">
-        <button>button left</button>
+        <img
+          src="../icons/arrow--left.svg"
+          alt=""
+          class="button-carousel"
+          id="no-id-yet-l"
+        />
         <div class="booking-reviews__text">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quo
@@ -109,7 +114,12 @@
           </p>
           <h1 class="header header__hand transform-none">Jack Daniels</h1>
         </div>
-        <button>button right</button>
+        <img
+          src="../icons/arrow--right.svg"
+          alt=""
+          class="button-carousel"
+          id="no-id-yet-r"
+        />
       </div>
     </section>
     <footer class="footer">
