trip booking page v11

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -103,9 +103,9 @@
           src="../icons/arrow--left.svg"
           alt=""
           class="button-carousel"
-          id="no-id-yet-l"
+          id="booking-btn-left"
         />
-        <div class="booking-reviews__text">
+        <div class="booking-reviews__box">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem quo
             illo error, nulla dolorem, ab provident ex quaerat quae doloribus
@@ -114,11 +114,31 @@
           </p>
           <h1 class="header header__hand transform-none">Jack Daniels</h1>
         </div>
+        <div class="booking-reviews__box">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus corrupti porro ipsa iusto. Deserunt ea culpa,
+            eligendi laborum quia natus voluptas quis cupiditate pariatur sed,
+            repudiandae minus reiciendis nobis fuga aspernatur nostrum! Ducimus,
+            totam laborum.
+          </p>
+          <h1 class="header header__hand transform-none">Jonny Walker</h1>
+        </div>
+        <div class="booking-reviews__box">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum
+            reprehenderit sit laborum impedit! Unde quas pariatur temporibus
+            perspiciatis amet magni dolorum officiis rem dolor deleniti ipsa aut
+            beatae quibusdam deserunt, assumenda nihil quasi debitis ipsam
+            consectetur?
+          </p>
+          <h1 class="header header__hand transform-none">Davidoff</h1>
+        </div>
         <img
           src="../icons/arrow--right.svg"
           alt=""
           class="button-carousel"
-          id="no-id-yet-r"
+          id="booking-btn-right"
         />
       </div>
     </section>
