--- a/pages/booking.html
+++ b/pages/booking.html
@@ -58,44 +58,79 @@
     <section class="booking-whyUs">
       <h1 class="header header__big center">Asking yourself why us?</h1>
     </section>
+    <!-- card -->
     <section class="booking-motivations">
-      <div class="booking-motivations__box">
-        <div
-          class="booking-motivations__picture booking-motivations__picture--1"
-        ></div>
-        <div class="booking-motivations__text">
-          <h1 class="header header__normal center">Client on first place</h1>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--1"></div>
+          <div class="card__text">
+            <h4 class="header header__normal center">Client on first place</h4>
+          </div>
+        </div>
+        <div class="card__side card__side--back">
+          <h4 class="header header__normal center">We care</h4>
+          <p class="margin-y center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
+            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
+            perspiciatis maiores esse incidunt dolore accusantium?
+          </p>
         </div>
       </div>
-      <div class="booking-motivations__box">
-        <div
-          class="booking-motivations__picture booking-motivations__picture--2"
-        ></div>
-        <div class="booking-motivations__text">
-          <h1 class="header header__normal center">
-            We take care of everything
-          </h1>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--2"></div>
+          <div class="card__text">
+            <h4 class="header header__normal center">
+              We take care on everything
+            </h4>
+          </div>
+        </div>
+        <div class="card__side card__side--back">
+          <h4 class="header header__normal center">We care</h4>
+          <p class="margin-y center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
+            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
+            perspiciatis maiores esse incidunt dolore accusantium?
+          </p>
         </div>
       </div>
-      <div class="booking-motivations__box">
-        <div
-          class="booking-motivations__picture booking-motivations__picture--3"
-        ></div>
-        <div class="booking-motivations__text">
-          <h1 class="header header__normal center">
-            Top rated places to visit
-          </h1>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--3"></div>
+          <div class="card__text">
+            <h4 class="header header__normal center">
+              top rated places to vizit
+            </h4>
+          </div>
+        </div>
+        <div class="card__side card__side--back">
+          <h4 class="header header__normal center">We care</h4>
+          <p class="margin-y center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
+            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
+            perspiciatis maiores esse incidunt dolore accusantium?
+          </p>
         </div>
       </div>
-      <div class="booking-motivations__box">
-        <div
-          class="booking-motivations__picture booking-motivations__picture--4"
-        ></div>
-        <div class="booking-motivations__text">
-          <h1 class="header header__normal center">Best choice overall</h1>
+      <div class="card">
+        <div class="card__side card__side--front">
+          <div class="card__picture card__picture--4"></div>
+          <div class="card__text">
+            <h4 class="header header__normal center">best choices overall</h4>
+          </div>
+        </div>
+        <div class="card__side card__side--back">
+          <h4 class="header header__normal center">We care</h4>
+          <p class="margin-y center">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
+            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
+            perspiciatis maiores esse incidunt dolore accusantium?
+          </p>
         </div>
       </div>
     </section>
+
+    <!-- reviews -->
     <section class="booking-reviews">
       <h1 class="header header__big center">Don't belive us, belive them...</h1>
       <div class="booking-reviews__container">
