trip booking page remove cards v1

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -59,76 +59,7 @@
       <h1 class="header header__big center">Asking yourself why us?</h1>
     </section>
     <!-- card -->
-    <section class="booking-motivations">
-      <div class="card">
-        <div class="card__side card__side--front">
-          <div class="card__picture card__picture--1"></div>
-          <div class="card__text">
-            <h4 class="header header__normal center">Client on first place</h4>
-          </div>
-        </div>
-        <div class="card__side card__side--back">
-          <h4 class="header header__normal center">We care</h4>
-          <p class="margin-y center">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
-            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
-            perspiciatis maiores esse incidunt dolore accusantium?
-          </p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card__side card__side--front">
-          <div class="card__picture card__picture--2"></div>
-          <div class="card__text">
-            <h4 class="header header__normal center">
-              We take care on everything
-            </h4>
-          </div>
-        </div>
-        <div class="card__side card__side--back">
-          <h4 class="header header__normal center">We care</h4>
-          <p class="margin-y center">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
-            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
-            perspiciatis maiores esse incidunt dolore accusantium?
-          </p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card__side card__side--front">
-          <div class="card__picture card__picture--3"></div>
-          <div class="card__text">
-            <h4 class="header header__normal center">
-              top rated places to vizit
-            </h4>
-          </div>
-        </div>
-        <div class="card__side card__side--back">
-          <h4 class="header header__normal center">We care</h4>
-          <p class="margin-y center">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
-            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
-            perspiciatis maiores esse incidunt dolore accusantium?
-          </p>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card__side card__side--front">
-          <div class="card__picture card__picture--4"></div>
-          <div class="card__text">
-            <h4 class="header header__normal center">best choices overall</h4>
-          </div>
-        </div>
-        <div class="card__side card__side--back">
-          <h4 class="header header__normal center">We care</h4>
-          <p class="margin-y center">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde
-            eveniet ex totam rem, dolores vitae quis doloribus officiis, animi
-            perspiciatis maiores esse incidunt dolore accusantium?
-          </p>
-        </div>
-      </div>
-    </section>
+    <section class="booking-motivations"></section>
 
     <!-- reviews -->
     <section class="booking-reviews">
