trip booking page cards v1

--- a/pages/booking.html
+++ b/pages/booking.html
@@ -59,7 +59,59 @@
       <h1 class="header header__big center">Asking yourself why us?</h1>
     </section>
     <!-- card -->
-    <section class="booking-motivations"></section>
+    <section class="booking-motivations">
+      <div class="booking-motivations__container">
+        <div class="booking-motivations__text booking-motivations__text--left">
+          <h3 class="header header__normal">Top experts</h3>
+          <p class="center">
+            Who will help you take the best decision. They have more then 10
+            years of experiences, and they have done over 10.000+ trips just to
+            give you the best ideas.
+          </p>
+        </div>
+        <div
+          class="booking-motivations__picture booking-motivations__picture--1"
+        ></div>
+      </div>
+      <div class="booking-motivations__container">
+        <div
+          class="booking-motivations__picture booking-motivations__picture--2"
+        ></div>
+        <div class="booking-motivations__text booking-motivations__text--right">
+          <h3 class="header header__normal">We take care</h3>
+          <p class="center">
+            of everything. From the tickets to the hotel we make sure everything
+            goes well. With us, you don't have to worry for anything because our
+            job is to make everything to go well.
+          </p>
+        </div>
+      </div>
+      <div class="booking-motivations__container">
+        <div class="booking-motivations__text booking-motivations__text--left">
+          <h3 class="header header__normal">Top rated locations</h3>
+          <p class="center">
+            around the world, with beautifull views and people. From Maldives to
+            Bali, from Bahamas to Sud Africa you will get everything you need
+            for the perfect vacantion
+          </p>
+        </div>
+        <div
+          class="booking-motivations__picture booking-motivations__picture--3"
+        ></div>
+      </div>
+      <div class="booking-motivations__container">
+        <div
+          class="booking-motivations__picture booking-motivations__picture--4"
+        ></div>
+        <div class="booking-motivations__text booking-motivations__text--right">
+          <h3 class="header header__normal">Why just one trip?</h3>
+          <p class="center">
+            We love to help you with these kind of things. Here we are 24/7,
+            with enthusiasm and good mood, prepared for you.
+          </p>
+        </div>
+      </div>
+    </section>
 
     <!-- reviews -->
     <section class="booking-reviews">
