--- a/pages/booking.html
+++ b/pages/booking.html
@@ -165,7 +165,7 @@
         <img src="../images/logo--3.svg" alt="road trip logo" />
       </div>
       <div class="footer__box footer__box-2">
-        <a href="#" class="link">about</a>
+        <a href="./about.html" class="link">about</a>
         <a href="#" class="link">travel services</a>
         <a href="#" class="link">insurance</a>
         <a href="#" class="link">info</a>
