--- a/pages/about.html
+++ b/pages/about.html
@@ -13,5 +13,18 @@
         ><img src="../images/logo--3.svg" alt="road trip logo" />
       </a>
     </section>
+    <div class="about-welcome">
+      <h1 class="header header__big">Your jurney starts here</h1>
+    </div>
+    <div class="about-intro">
+      <h3 class="header header__normal">about us</h3>
+      <h4 class="header header__hand">Lorem ipsum dolor sit amet.</h4>
+      <p class="center margin-y">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+        totam nostrum laboriosam voluptatem est molestiae dolore qui quam quae
+        commodi doloremque, vero maiores obcaecati in incidunt blanditiis esse
+        error? Itaque?
+      </p>
+    </div>
   </body>
 </html>
