--- a/pages/about.html
+++ b/pages/about.html
@@ -26,5 +26,76 @@
         error? Itaque?
       </p>
     </div>
+    <section class="about-us about-us">
+      <div class="about-us__picture about-us__picture--1"></div>
+      <div class="about-us__text">
+        <div class="about-us__text__header">
+          <h4 class="header header__small">team</h4>
+          <p class="center p-small">
+            Our team work 24/7 to give you the best assistance in your journay.
+            They are proffessional, bla bla bla... Our goal is to make sure you
+            get the best trip ever all over the world.
+          </p>
+        </div>
+        <div class="about-us__text__container">
+          <div class="about-us__text__box">
+            <h5 class="header header__card">Avaible</h5>
+            <p class="p-small center">In all country 24/7</p>
+          </div>
+          <div class="about-us__text__box">
+            <h5 class="header header__card">We speak</h5>
+            <p class="p-small center">More then 15 languages</p>
+          </div>
+          <div class="about-us__text__box">
+            <h5 class="header header__card">Employes</h5>
+            <p class="p-small center">With more then 10 years experience</p>
+          </div>
+          <div class="about-us__text__box">
+            <h5 class="header header__card">Ready</h5>
+            <p class="p-small center">For any situations</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about-clients about-us">
+      <div class="about-us__text">
+        <div class="about-us__text__header">
+          <h4 class="header header__small">Clients</h4>
+          <p class="center p-small">
+            Our clients are very satisfied with our services. They like our
+            services because they don't have to spend time looking for
+            complicated offerts or hidden fees. With us everything is
+            trasnparent and easy.
+          </p>
+        </div>
+        <div class="about-us__text__container">
+          <div class="about-us__text__box">
+            <h5 class="header header__card">Feedback</h5>
+            <p class="p-small center">
+              Usually we get a very good feedback from clients.
+            </p>
+          </div>
+          <div class="about-us__text__box">
+            <h5 class="header header__card">New clients</h5>
+            <p class="p-small center">
+              99.9% of new clients want's a second trip.
+            </p>
+          </div>
+          <div class="about-us__text__box">
+            <h5 class="header header__card">Prices</h5>
+            <p class="p-small center">
+              We are constantly looking for good prices and quality.
+            </p>
+          </div>
+          <div class="about-us__text__box">
+            <h5 class="header header__card">Expectations</h5>
+            <p class="p-small center">
+              Every time we want to exceed expectations
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="about-us__picture about-us__picture--2"></div>
+    </section>
   </body>
 </html>
