--- a/pages/about.html
+++ b/pages/about.html
@@ -97,5 +97,15 @@
       </div>
       <div class="about-us__picture about-us__picture--2"></div>
     </section>
+    <section class="about-story">
+      <h1 class="header header__big text-white">Story</h1>
+      <h2 class="header header__small">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      </h2>
+      <div class="about-story__card about-story__card--1"></div>
+      <div class="about-story__card about-story__card--2"></div>
+      <div class="about-story__card about-story__card--3"></div>
+      <div class="about-story__card about-story__card--4"></div>
+    </section>
   </body>
 </html>
