--- a/pages/about.html
+++ b/pages/about.html
@@ -102,7 +102,17 @@
       <h2 class="header header__small">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
       </h2>
-      <div class="about-story__card about-story__card--1"></div>
+      <div class="about-story__card about-story__card--1">
+        <div class="about-story__title">
+          <h3 class="header header__small">first trip</h3>
+          <!-- <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
+            laudantium ea. Animi libero nemo minus laboriosam odit.
+          </p> -->
+        </div>
+        <div class="about-story__text"></div>
+      </div>
       <div class="about-story__card about-story__card--2"></div>
       <div class="about-story__card about-story__card--3"></div>
       <div class="about-story__card about-story__card--4"></div>
