--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../src/style/main.scss" />
+    <script src="../src/javascript/PageAbout.js" defer></script>
     <title>About</title>
   </head>
   <body>
@@ -103,19 +104,45 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
       </h2>
       <div class="about-story__card about-story__card--1">
-        <div class="about-story__title">
-          <h3 class="header header__small">first trip</h3>
-          <!-- <p>
+        <div class="about-story__text">
+          <h3 class="header header__small headerJS">first trip</h3>
+          <p class="paragraphJS p-hidden">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
             laudantium ea. Animi libero nemo minus laboriosam odit.
-          </p> -->
+          </p>
         </div>
-        <div class="about-story__text"></div>
       </div>
-      <div class="about-story__card about-story__card--2"></div>
-      <div class="about-story__card about-story__card--3"></div>
-      <div class="about-story__card about-story__card--4"></div>
+      <div class="about-story__card about-story__card--2">
+        <div class="about-story__text">
+          <h3 class="header header__small headerJS">second trip</h3>
+          <p class="paragraphJS p-hidden">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
+            laudantium ea. Animi libero nemo minus laboriosam odit.
+          </p>
+        </div>
+      </div>
+      <div class="about-story__card about-story__card--3">
+        <div class="about-story__text">
+          <h3 class="header header__small headerJS">second trip</h3>
+          <p class="paragraphJS p-hidden">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
+            laudantium ea. Animi libero nemo minus laboriosam odit.
+          </p>
+        </div>
+      </div>
+      <div class="about-story__card about-story__card--4">
+        <div class="about-story__text">
+          <h3 class="header header__small headerJS">second trip</h3>
+          <p class="paragraphJS p-hidden">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
+            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
+            laudantium ea. Animi libero nemo minus laboriosam odit.
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
