--- a/pages/about.html
+++ b/pages/about.html
@@ -106,7 +106,7 @@
       <div class="about-story__card about-story__card--1">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">first trip</h3>
-          <p class="paragraphJS p-hidden">
+          <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
             laudantium ea. Animi libero nemo minus laboriosam odit.
@@ -116,7 +116,7 @@
       <div class="about-story__card about-story__card--2">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">second trip</h3>
-          <p class="paragraphJS p-hidden">
+          <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
             laudantium ea. Animi libero nemo minus laboriosam odit.
@@ -125,8 +125,8 @@
       </div>
       <div class="about-story__card about-story__card--3">
         <div class="about-story__text">
-          <h3 class="header header__small headerJS">second trip</h3>
-          <p class="paragraphJS p-hidden">
+          <h3 class="header header__small headerJS">third trip</h3>
+          <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
             laudantium ea. Animi libero nemo minus laboriosam odit.
@@ -135,8 +135,8 @@
       </div>
       <div class="about-story__card about-story__card--4">
         <div class="about-story__text">
-          <h3 class="header header__small headerJS">second trip</h3>
-          <p class="paragraphJS p-hidden">
+          <h3 class="header header__small headerJS">last trip</h3>
+          <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
             laudantium ea. Animi libero nemo minus laboriosam odit.
