--- a/pages/about.html
+++ b/pages/about.html
@@ -109,7 +109,7 @@
           <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. Animi libero nemo minus laboriosam odit.
+            laudantium ea. paragraph 1.
           </p>
         </div>
       </div>
@@ -119,7 +119,7 @@
           <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. Animi libero nemo minus laboriosam odit.
+            laudantium ea. paragraph 2.
           </p>
         </div>
       </div>
@@ -129,7 +129,7 @@
           <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. Animi libero nemo minus laboriosam odit.
+            laudantium ea. paragraph 3.
           </p>
         </div>
       </div>
@@ -139,7 +139,7 @@
           <p class="paragraphJS">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
             reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. Animi libero nemo minus laboriosam odit.
+            laudantium ea. paragraph 4.
           </p>
         </div>
       </div>
