--- a/pages/about.html
+++ b/pages/about.html
@@ -103,46 +103,57 @@
       <h2 class="header header__small">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
       </h2>
+      <!-- card -->
       <div class="about-story__card about-story__card--1">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">first trip</h3>
-          <p class="paragraphJS">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
-            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. paragraph 1.
+          <button class="button-readmore open-card-text">Read more</button>
+          <p class="hidden paragraph-card">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+            sit similique fugiat animi exercitationem saepe, repudiandae quaerat
+            placeat sed vero suscipit rerum TEXT 1.
           </p>
+          <button class="button-readmore hidden close-card-text">Close</button>
         </div>
       </div>
       <div class="about-story__card about-story__card--2">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">second trip</h3>
-          <p class="paragraphJS">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
-            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. paragraph 2.
+          <button class="button-readmore open-card-text">Read more</button>
+          <p class="hidden paragraph-card">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+            sit similique fugiat animi exercitationem saepe, repudiandae quaerat
+            placeat sed vero suscipit rerum TEXT 2.
           </p>
+          <button class="button-readmore hidden close-card-text">Close</button>
         </div>
       </div>
+      <!-- end card -->
       <div class="about-story__card about-story__card--3">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">third trip</h3>
-          <p class="paragraphJS">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
-            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. paragraph 3.
+          <button class="button-readmore open-card-text">Read more</button>
+          <p class="hidden paragraph-card">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+            sit similique fugiat animi exercitationem saepe, repudiandae quaerat
+            placeat sed vero suscipit rerum TEXT 3.
           </p>
+          <button class="button-readmore hidden close-card-text">Close</button>
         </div>
       </div>
       <div class="about-story__card about-story__card--4">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">last trip</h3>
-          <p class="paragraphJS">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore
-            reprehenderit nemo cumque ipsa excepturi sunt recusandae nam
-            laudantium ea. paragraph 4.
+          <button class="button-readmore open-card-text">Read more</button>
+          <p class="hidden paragraph-card">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus
+            sit similique fugiat animi exercitationem saepe, repudiandae quaerat
+            placeat sed vero suscipit rerum TEXT 4.
           </p>
+          <button class="button-readmore hidden close-card-text">Close</button>
         </div>
       </div>
+      <!-- end card -->
     </section>
   </body>
 </html>
