--- a/pages/about.html
+++ b/pages/about.html
@@ -103,7 +103,6 @@
       <h2 class="header header__small">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
       </h2>
-      <!-- card -->
       <div class="about-story__card about-story__card--1">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">first trip</h3>
@@ -128,7 +127,6 @@
           <button class="button-readmore hidden close-card-text">Close</button>
         </div>
       </div>
-      <!-- end card -->
       <div class="about-story__card about-story__card--3">
         <div class="about-story__text">
           <h3 class="header header__small headerJS">third trip</h3>
@@ -153,7 +151,36 @@
           <button class="button-readmore hidden close-card-text">Close</button>
         </div>
       </div>
-      <!-- end card -->
     </section>
+
+    <section class="about-testimonial">
+      <h1 class="header header__big">Big thanks to</h1>
+      <h3 class="header header__hand">You</h3>
+      <p>Yes <em class="header__hand">you</em> who spend time with us.</p>
+      <p>Yes <em class="header__hand">you</em> who belive in us.</p>
+      <p>Yes <em class="header__hand">you</em> who let us help you.</p>
+      <p>Yes <em class="header__hand">you</em> who make this possible.</p>
+      <h3 class="header header__hand margin-y">We are grateful to You</h3>
+      <h1 class="header header__big">🥂</h1>
+    </section>
+
+    <!-- footer -->
+    <footer class="footer">
+      <div class="footer__box footer__box-1">
+        <img src="../images/logo--3.svg" alt="road trip logo" />
+      </div>
+      <div class="footer__box footer__box-2">
+        <a href="../pages/about.html" class="link">about</a>
+        <a href="#" class="link">travel services</a>
+        <a href="#" class="link">insurance</a>
+        <a href="#" class="link">info</a>
+      </div>
+      <div class="footer__box footer__box-3">
+        <a href="#" class="link">contact us</a>
+        <a href="#" class="link">blog</a>
+        <a href="#" class="link">privacy policy</a>
+        <a href="#" class="link">safe spams</a>
+      </div>
+    </footer>
   </body>
 </html>
