--- a/pages/about.html
+++ b/pages/about.html
@@ -17,6 +17,10 @@
     <div class="about-welcome">
       <h1 class="header header__big">Your jurney starts here</h1>
     </div>
+    <div class="about-navigation">
+      <a href="../index.html" class="button-link">home</a>
+      <a href="./booking.html" class="button-link">booking</a>
+    </div>
     <div class="about-intro">
       <h3 class="header header__normal">about us</h3>
       <h4 class="header header__hand">Lorem ipsum dolor sit amet.</h4>
@@ -27,7 +31,7 @@
         error? Itaque?
       </p>
     </div>
-    <section class="about-us about-us">
+    <section class="about-team about-us">
       <div class="about-us__picture about-us__picture--1"></div>
       <div class="about-us__text">
         <div class="about-us__text__header">
@@ -161,26 +165,6 @@
       <p>Yes <em class="header__hand">you</em> who let us help you.</p>
       <p>Yes <em class="header__hand">you</em> who make this possible.</p>
       <h3 class="header header__hand margin-y">We are grateful to You</h3>
-      <h1 class="header header__big">🥂</h1>
     </section>
-
-    <!-- footer -->
-    <footer class="footer">
-      <div class="footer__box footer__box-1">
-        <img src="../images/logo--3.svg" alt="road trip logo" />
-      </div>
-      <div class="footer__box footer__box-2">
-        <a href="../pages/about.html" class="link">about</a>
-        <a href="#" class="link">travel services</a>
-        <a href="#" class="link">insurance</a>
-        <a href="#" class="link">info</a>
-      </div>
-      <div class="footer__box footer__box-3">
-        <a href="#" class="link">contact us</a>
-        <a href="#" class="link">blog</a>
-        <a href="#" class="link">privacy policy</a>
-        <a href="#" class="link">safe spams</a>
-      </div>
-    </footer>
   </body>
 </html>
