--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <a href="#" class="link">info</a>
       </div>
       <div class="footer__box footer__box-3">
-        <a href="#" class="link">contact us</a>
+        <a href="./pages/contact.html" class="link">contact us</a>
         <a href="#" class="link">blog</a>
         <a href="#" class="link">privacy policy</a>
         <a href="#" class="link">safe spams</a>
