--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       </a>
     </section>
     <navigation class="navigation">
+      <a href="./pages/booking.html" class="button-link">booking</a>
       <button class="button-menu" id="buttonShopping">
         <img src="./icons/shopping-cart-solid.svg" alt="schopping cart" />
       </button>
