--- a/pages/about.html
+++ b/pages/about.html
@@ -17,7 +17,7 @@
     <div class="about-welcome">
       <h1 class="header header__big">Your jurney starts here</h1>
     </div>
-    <div class="about-navigation">
+    <div class="my-navigation">
       <a href="../index.html" class="button-link">home</a>
       <a href="./booking.html" class="button-link">booking</a>
     </div>
