--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,5 +14,42 @@
         ><img src="../images/logo--3.svg" alt="road trip logo" />
       </a>
     </section>
+    <div class="my-navigation">
+      <a href="../index.html" class="button-link">home</a>
+      <a href="./booking.html" class="button-link">booking</a>
+    </div>
+    <section class="map">
+      <div class="mapouter">
+        <div class="gmap_canvas">
+          <iframe
+            width="1080"
+            height="400"
+            id="gmap_canvas"
+            src="https://maps.google.com/maps?q=rome,%20italy&t=&z=13&ie=UTF8&iwloc=&output=embed"
+            frameborder="0"
+            scrolling="no"
+            marginheight="0"
+            marginwidth="0"
+          ></iframe
+          ><a href="https://www.whatismyip-address.com/divi-discount/"></a
+          ><br /><style>
+            .mapouter {
+              position: relative;
+              text-align: right;
+              height: 400px;
+              width: 1080px;
+            }</style
+          ><a href="https://www.embedgooglemap.net">iframe html generator</a
+          ><style>
+            .gmap_canvas {
+              overflow: hidden;
+              background: none !important;
+              height: 400px;
+              width: 1080px;
+            }
+          </style>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
