--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,35 +19,39 @@
       <a href="./booking.html" class="button-link">booking</a>
     </div>
     <section class="map">
-      <div class="mapouter">
-        <div class="gmap_canvas">
-          <iframe
-            width="1080"
-            height="400"
-            id="gmap_canvas"
-            src="https://maps.google.com/maps?q=rome,%20italy&t=&z=13&ie=UTF8&iwloc=&output=embed"
-            frameborder="0"
-            scrolling="no"
-            marginheight="0"
-            marginwidth="0"
-          ></iframe
-          ><a href="https://www.whatismyip-address.com/divi-discount/"></a
-          ><br /><style>
-            .mapouter {
-              position: relative;
-              text-align: right;
-              height: 400px;
-              width: 1080px;
-            }</style
-          ><a href="https://www.embedgooglemap.net">iframe html generator</a
-          ><style>
-            .gmap_canvas {
-              overflow: hidden;
-              background: none !important;
-              height: 400px;
-              width: 1080px;
-            }
-          </style>
+      <div class="map__box">
+        <div class="mapouter">
+          <div class="gmap_canvas">
+            <iframe
+              width="1080"
+              height="500"
+              id="gmap_canvas"
+              src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed"
+              frameborder="0"
+              scrolling="no"
+              marginheight="0"
+              marginwidth="0"
+            ></iframe
+            ><a
+              href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"
+              >divi discount</a
+            ><br /><style>
+              .mapouter {
+                position: relative;
+                text-align: right;
+                height: 500px;
+                width: 1080px;
+              }</style
+            ><a href="https://www.embedgooglemap.net"></a
+            ><style>
+              .gmap_canvas {
+                overflow: hidden;
+                background: none !important;
+                height: 500px;
+                width: 1080px;
+              }
+            </style>
+          </div>
         </div>
       </div>
     </section>
